// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`will query nested relationships 1`] = `
	select
	  \`C\`.\`label\` as \`label\`
	from
	  \`A\`
	  left join \`B\` on \`B\`.\`id\` = \`A\`.\`bId\`
	  left join \`C\` on \`C\`.\`id\` = \`B\`.\`cId\`
	where
	  \`C\`.\`value\` = 100
`;

exports[`will query via select function 1`] = `
	select
	  \`A\`.\`value\` as 1
	from
	  \`A\`
	  left join \`B\` on \`B\`.\`id\` = \`A\`.\`bId\`
	  left join \`C\` on \`C\`.\`id\` = \`B\`.\`cId\`
`;

exports[`will select via an object 1`] = `
	select
	  \`A\`.\`value\` as \`aValue\`,
	  \`C\`.\`value\` as \`cValue\`
	from
	  \`A\`
	  left join \`B\` on \`B\`.\`id\` = \`A\`.\`bId\`
	  left join \`C\` on \`C\`.\`id\` = \`B\`.\`cId\`
`;
